<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.tuyenvo.xeduyen.account.viewmodels.AccountViewModel" />

        <import type="com.tuyenvo.xeduyen.utils.enums.GenderEnum" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/_16sdp"
        tools:context=".account.fragments.SignUpFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="@dimen/_36sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_btn_back" />

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_app_logo" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/appBar"
                android:layout_marginTop="@dimen/_32sdp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewmodel.firstName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewmodel.lastName}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameContainer"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/username"
                app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                app:boxCornerRadiusTopStart="@dimen/_15sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewmodel.username}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameContainer"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                app:boxCornerRadiusTopStart="@dimen/_15sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewmodel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordContainer"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/confirm_password"
                app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                app:boxCornerRadiusTopStart="@dimen/_15sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewmodel.confirmPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/genderContainerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirmPasswordContainer"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/sk_modernist_bold"
                android:text="@string/your_gender"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/genderContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/genderContainerTitle"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/femaleGenderButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@{viewmodel.gender == GenderEnum.FEMALE ? @color/red : @color/white}"
                    android:minHeight="@dimen/_56sdp"
                    android:onClick="@{viewmodel::onClickFemaleButton}"
                    android:text="@string/female"
                    android:textAllCaps="false"
                    android:textColor="@{viewmodel.gender == GenderEnum.FEMALE ? @color/white : @color/red_20}"
                    android:theme="@style/ButtonSolidTheme"
                    app:cornerRadius="@dimen/_15sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/maleGenderButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@{viewmodel.gender == GenderEnum.MALE ? @color/red : @color/white}"
                    android:minHeight="@dimen/_56sdp"
                    android:onClick="@{viewmodel::onClickMaleButton}"
                    android:text="@string/male"
                    android:textAllCaps="false"
                    android:textColor="@{viewmodel.gender == GenderEnum.MALE ? @color/white : @color/red_20}"
                    android:theme="@style/ButtonSolidTheme"
                    app:cornerRadius="@dimen/_15sdp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_12sdp"
                android:minHeight="@dimen/_56sdp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:theme="@style/ButtonSolidTheme"
                app:cornerRadius="@dimen/_15sdp"
                app:flow_verticalBias="0.5" />
        </RelativeLayout>
    </ScrollView>
</layout>